# furigana

./: Cargo.toml  README.md
examples/: map.rs  map_naive.rs
src/: furigana.rs  lib.rs  segmentation.rs  utils.rs
